added Living Student component. minor style to LivingStudent and SharkTank components

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,4 +4,10 @@
 
 body {
   background-color: $favColor;
+
+  h1 {
+    color: white;
+    margin-top: 10px;
+    text-shadow: 2px 2px lightgrey;
+  }
 }
