--- a/src/components/LivingStudent/LivingStudent.scss
+++ b/src/components/LivingStudent/LivingStudent.scss
@@ -8,4 +8,11 @@
 
 .fa-fish {
   color:orange;
+  text-shadow: 1px 1px lightgrey;
+}
+
+@media only screen and (max-width: 600px) {
+  .fishie, .deadman {
+    margin: 5px;
+  }
 }
