--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,10 @@
 @import 'variables';
 
 body {
-  background-color: $favColor;
+  background: #8e9eab;
+  background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);
+  background: linear-gradient(to right, #eef2f3, #8e9eab); 
+  
 
   h1 {
     color: white;
