--- a/src/components/GraveStone/GraveStone.scss
+++ b/src/components/GraveStone/GraveStone.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Joti+One&display=swap');
 
 .fa-dizzy {
-  text-shadow: 1px 1px darkgrey;
+  text-shadow: .5px .5px darkgrey;
 }
 
 h2 {
